adjust horizontal scrolling fix

--- a/ui/src/stylesheets/article.scss
+++ b/ui/src/stylesheets/article.scss
@@ -11,7 +11,7 @@
   margin-right: var(--xl);
   min-height: calc(100vh - 163px);
   max-width: 964px;
-  width: calc(100% - 200px - 3rem); // 100% of parent (main) minus toc width and margin
+  width: calc(100% - 200px - 6rem); // 100% of parent (main) minus toc width and margin
 
   // h2 {
   //   text-transform: uppercase;
